# lib_log_rich

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  CONSOLESTYLES.md  DEVELOPMENT.md  DIAGNOSTIC.md  EXAMPLES.md  INSTALL.md  INSTALL_JOURNAL.md  LOGDUMP.md  Makefile  OPENTELEMETRY.md  QUEUE.md  README.md  STREAMINGCONSOLE.md  SUBPROCESSES.md  concept.md  pyproject.toml  qlty.toml
.devcontainer/: devcontainer.json  settings.json
.github.bak/workflows/: ci.yml
.github/workflows/: ci.yml  codeql.yml  default_cicd_public.yml  default_release_public.yml  release.yml
LLM-CONTEXT/: COMPLETION_SUMMARY.md  FINAL_COMPLETE_REPORT.md  analyze_complexity.py  categorize_files.sh  categorized_files.txt  changes.diff  check_duplication.py  complexity___init__.txt  complexity_all.txt  duplication_report.txt  files_to_review.txt  final_implementation_report.md  implementation_summary.md  phase3_completion_report.md  prioritized_review_plan.txt  problematic_functions.txt  review_report.md
docs/systemdesign/: concept.md  concept_architecture.md  concept_architecture_plan.md  konzept.md  konzept_architecture.md  konzept_architecture_plan.md  module_reference.md
examples/: flask_console_stream.py
notebooks/: Quickstart.ipynb
packaging/brew/Formula/: lib-log-rich.rb
packaging/conda/recipe/: meta.yaml
packaging/nix/: flake.nix
scripts/: _utils.py  bump_version.py  generate_nix_flake.py  run_cli.py  stresstest.py  test.py
src/lib_log_rich/: __init__.py  __init__conf__.py  __main__.py  cli.py  cli_stresstest.py  config.py  demo.py  lib_log_rich.py  typed_click.py
src/lib_log_rich/adapters/: __init__.py  _formatting.py  _json_coerce.py  _queue_worker.py  _schemas.py  dump.py  graylog.py  queue.py  rate_limiter.py  scrubber.py
src/lib_log_rich/adapters/console/: __init__.py  queue_console.py  rich_console.py
src/lib_log_rich/adapters/structured/: __init__.py  journald.py  windows_eventlog.py
src/lib_log_rich/application/: __init__.py
src/lib_log_rich/application/ports/: __init__.py  console.py  dump.py  graylog.py  identity.py  queue.py  rate_limiter.py  scrubber.py  structures.py  time.py
src/lib_log_rich/application/use_cases/: _fan_out.py  _payload_sanitizer.py  _pipeline.py  _queue_dispatch.py  _types.py  dump.py  process_event.py  shutdown.py
src/lib_log_rich/domain/: __init__.py  analytics.py  context.py  dump.py  dump_filter.py  enums.py  events.py  levels.py  ring_buffer.py
src/lib_log_rich/runtime/: __init__.py  _api.py  _composition.py  _factories.py  _settings.py  _state.py  _stdlib_handler.py
src/lib_log_rich/runtime/settings/: __init__.py  models.py  resolvers.py
tests/: conftest.py  test_basic.py  test_cli.py  test_cli_stresstest.py  test_config_dotenv.py  test_demo.py  test_metadata.py  test_module_entrypoint.py  test_runtime.py  test_scripts.py
tests/adapters/: test_console_adapter.py  test_dump_adapter.py  test_formatting_payload.py  test_graylog_adapter.py  test_journald_adapter.py  test_queue_adapter.py  test_queue_high_volume.py  test_queue_worker_state.py  test_schemas.py  test_scrubber_rate_limiter.py  test_windows_eventlog_adapter.py
tests/analytics/: FINAL_CACHE_ANALYSIS_SUMMARY.md
tests/application/: test_fan_out_dispatch.py  test_payload_sanitizer.py  test_payload_sanitizer_properties.py  test_ports_contracts.py  test_process_event_limits.py  test_use_cases.py
tests/domain/: test_context.py  test_dump.py  test_events.py  test_levels.py  test_ring_buffer.py
tests/runtime/: test_dump_api.py  test_flush.py  test_logger_proxy.py  test_runtime_console_factory.py  test_runtime_factories.py  test_runtime_poetics.py  test_runtime_settings_validation.py  test_runtime_state.py  test_settings_resolvers.py  test_stdlib_handler.py
